<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E19898"
    tools:context=".MainActivity2">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="130dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/purple1"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="-345dp">

        <TableRow android:background="@color/purple">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/lemondays"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/col1"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row1satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row1dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row2satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row2dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row3satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row3dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row5satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row5dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row6satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row6dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row9satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row9dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row10satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row10dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row11satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row11dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row12satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row12dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row13satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row13dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row14satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row14dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row15satu"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/peachcake"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/row15dua"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>


    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:onClick="next"
        android:text="NEXT"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>